Border hover fix on mobile

--- a/src/todo.module.css
+++ b/src/todo.module.css
@@ -460,4 +460,10 @@ li:first-child {
     margin-right: 1rem;
     cursor: pointer;
   }
+
+  .todoCheckBox:hover {
+    border: none;
+  }
+
+
 }
